Fix mobile styling of release signature and dates and allow data hash code to have line break on mobile

--- a/src/components/Section/Package/Package.scss
+++ b/src/components/Section/Package/Package.scss
@@ -5,6 +5,7 @@ h4.hash {
 
 p.hash {
   font-size: 1.5rem;
+  word-break: break-all;
 }
 
 h4.attachments {
